--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
 #########
 #VS code#
 #########
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
+**/.vscode/
+**/.vs/
+**/.idea/
 
 # Local History for Visual Studio Code
 .history/
