--- a/filter/Makefile
+++ b/filter/Makefile
@@ -17,6 +17,15 @@ $(DATA_PATH)/randomints_sparse_500MiB.in:
 $(DATA_PATH)/randomints_dense_500MiB.in:
 	(cd $(DATA_PATH) && make)
 
+$(DATA_PATH)/randomints_moderate_500MiB.in:
+	(cd $(DATA_PATH) && make)
+
+$(DATA_PATH)/randomints_empty_500MiB.in:
+	(cd $(DATA_PATH) && make)
+
+$(DATA_PATH)/randomints_full_500MiB.in:
+	(cd $(DATA_PATH) && make)
+
 $(FUTHARK_PROGRAM): $(FUTHARK_PATH)/$(FUTHARK_PROGRAM).fut
 	futhark cuda $< -o $(FUTHARK_PROGRAM)
 
@@ -26,10 +35,33 @@ randomints_sparse_500MiB.out: $(DATA_PATH)/randomints_sparse_500MiB.in $(FUTHARK
 randomints_dense_500MiB.out: $(DATA_PATH)/randomints_dense_500MiB.in $(FUTHARK_PROGRAM)
 	cat $< | ./$(FUTHARK_PROGRAM) -e expected -b > $@
 
-bench: randomints_dense_500MiB.out randomints_sparse_500MiB.out $(CUDA_PROGRAM) $(FUTHARK_PROGRAM)
-	futhark bench $(FUTHARK_PATH)/$(FUTHARK_PROGRAM).fut
-	./cuda_filter ../data/randomints_dense_500MiB.in ./randomints_dense_500MiB.out
-	./cuda_filter ../data/randomints_sparse_500MiB.in ./randomints_sparse_500MiB.out
+randomints_moderate_500MiB.out: $(DATA_PATH)/randomints_moderate_500MiB.in $(FUTHARK_PROGRAM)
+	cat $< | ./$(FUTHARK_PROGRAM) -e expected -b > $@
+
+randomints_empty_500MiB.out: $(DATA_PATH)/randomints_empty_500MiB.in $(FUTHARK_PROGRAM)
+	cat $< | ./$(FUTHARK_PROGRAM) -e expected -b > $@
+
+randomints_full_500MiB.out: $(DATA_PATH)/randomints_full_500MiB.in $(FUTHARK_PROGRAM)
+	cat $< | ./$(FUTHARK_PROGRAM) -e expected -b > $@
+
+bench: randomints_dense_500MiB.out \
+	   randomints_sparse_500MiB.out \
+	   randomints_moderate_500MiB.out \
+	   randomints_empty_500MiB.out \
+	   randomints_full_500MiB.out \
+	   $(DATA_PATH)/randomints_dense_500MiB.in \
+	   $(DATA_PATH)/randomints_sparse_500MiB.in \
+	   $(DATA_PATH)/randomints_moderate_500MiB.in \
+	   $(DATA_PATH)/randomints_empty_500MiB.in \
+	   $(DATA_PATH)/randomints_full_500MiB.in \
+	   $(CUDA_PROGRAM) \
+	   $(FUTHARK_PROGRAM)
+	futhark bench $(FUTHARK_PATH)/$(FUTHARK_PROGRAM).fut --backend=cuda
+	./$(CUDA_PROGRAM) $(DATA_PATH)/randomints_dense_500MiB.in ./randomints_dense_500MiB.out
+	./$(CUDA_PROGRAM) $(DATA_PATH)/randomints_sparse_500MiB.in ./randomints_sparse_500MiB.out
+	./$(CUDA_PROGRAM) $(DATA_PATH)/randomints_moderate_500MiB.in ./randomints_moderate_500MiB.out
+	./$(CUDA_PROGRAM) $(DATA_PATH)/randomints_empty_500MiB.in ./randomints_empty_500MiB.out
+	./$(CUDA_PROGRAM) $(DATA_PATH)/randomints_full_500MiB.in ./randomints_full_500MiB.out
 
 $(CUDA_PROGRAM): $(CUDA_PATH)/$(CUDA_PROGRAM).cu $(COMMON_PATH)/sps.cu.h $(COMMON_PATH)/util.cu.h $(COMMON_PATH)/data.h
 	$(COMPILER) $(FLAGS) -o $@ $<
