Segmented reduce is done.

--- a/segreduce/Makefile
+++ b/segreduce/Makefile
@@ -5,7 +5,7 @@ FUTHARK_PROGRAM=futhark_segreduce
 CUDA_PATH=./cuda
 CUDA_PROGRAM=cuda_segreduce
 COMPILER?=nvcc
-FLAGS?=-O3 --std=c++14 -diag-suppress 550
+FLAGS?=-O3 --std=c++14 -diag-suppress 550 -diag-suppress 20054
 
 default: bench
 
@@ -55,11 +55,16 @@ randomints_empty_500MiB.out: randomints_empty_500MiB.in $(FUTHARK_PROGRAM)
 randomints_full_500MiB.out: randomints_full_500MiB.in $(FUTHARK_PROGRAM)
 	cat $< | ./$(FUTHARK_PROGRAM) -e expected -b > $@
 
-data: randomints_dense_500MiB.in \
+data: randomints_dense_500MiB.out \
+	  randomints_sparse_500MiB.out \
+	  randomints_moderate_500MiB.out \
+	  randomints_empty_500MiB.out \
+	  randomints_full_500MiB.out \
+	  randomints_dense_500MiB.in \
 	  randomints_sparse_500MiB.in \
 	  randomints_moderate_500MiB.in \
 	  randomints_empty_500MiB.in \
-	  randomints_full_500MiB.in 
+	  randomints_full_500MiB.in \
 
 bench: randomints_dense_500MiB.out \
 	   randomints_sparse_500MiB.out \
@@ -74,11 +79,11 @@ bench: randomints_dense_500MiB.out \
 	   $(CUDA_PROGRAM) \
 	   $(FUTHARK_PROGRAM)
 	futhark bench $(FUTHARK_PATH)/$(FUTHARK_PROGRAM).fut --backend=cuda
-	./$(CUDA_PROGRAM) $(DATA_PATH)/randomints_dense_500MiB.in ./randomints_dense_500MiB.out
-	./$(CUDA_PROGRAM) $(DATA_PATH)/randomints_sparse_500MiB.in ./randomints_sparse_500MiB.out
-	./$(CUDA_PROGRAM) $(DATA_PATH)/randomints_moderate_500MiB.in ./randomints_moderate_500MiB.out
-	./$(CUDA_PROGRAM) $(DATA_PATH)/randomints_empty_500MiB.in ./randomints_empty_500MiB.out
-	./$(CUDA_PROGRAM) $(DATA_PATH)/randomints_full_500MiB.in ./randomints_full_500MiB.out
+	./$(CUDA_PROGRAM) ./randomints_dense_500MiB.in ./randomints_dense_500MiB.out
+	./$(CUDA_PROGRAM) ./randomints_sparse_500MiB.in ./randomints_sparse_500MiB.out
+	./$(CUDA_PROGRAM) ./randomints_moderate_500MiB.in ./randomints_moderate_500MiB.out
+	./$(CUDA_PROGRAM) ./randomints_empty_500MiB.in ./randomints_empty_500MiB.out
+	./$(CUDA_PROGRAM) ./randomints_full_500MiB.in ./randomints_full_500MiB.out
 
 $(CUDA_PROGRAM): $(CUDA_PATH)/$(CUDA_PROGRAM).cu $(COMMON_PATH)/sps.cu.h $(COMMON_PATH)/util.cu.h $(COMMON_PATH)/data.h
 	$(COMPILER) $(FLAGS) -o $@ $<
