--- a/data/Makefile
+++ b/data/Makefile
@@ -1,13 +1,15 @@
 CC?=cc
 CFLAGS?=-O3 -Wall -Werror -Wextra -pedantic -g
 RANDOM_INTS=randomints
+TOKENS=tokens
 COMMON=../common
 
 default: $(RANDOM_INTS)_full_500MiB.in \
 		 $(RANDOM_INTS)_dense_500MiB.in \
 		 $(RANDOM_INTS)_moderate_500MiB.in \
 		 $(RANDOM_INTS)_sparse_500MiB.in \
-		 $(RANDOM_INTS)_empty_500MiB.in
+		 $(RANDOM_INTS)_empty_500MiB.in \
+		 $(TOKENS)_500MiB.in
 
 .PHONY: clean
 
@@ -29,5 +31,11 @@ $(RANDOM_INTS)_sparse_500MiB.in: $(RANDOM_INTS)
 $(RANDOM_INTS)_empty_500MiB.in: $(RANDOM_INTS)
 	./$< 131072000 100 > $@ 
 
+$(TOKENS): $(TOKENS).c
+	$(CC) $(CFLAGS) -o $(TOKENS) $<
+
+$(TOKENS)_500MiB.in: $(TOKENS)
+	./$< 524288000 > $@ 
+
 clean:
-	rm -f $(RANDOM_INTS) $(RANDOM_INTS)_*.in
+	rm -f $(RANDOM_INTS) $(RANDOM_INTS)_*.in $(TOKENS) $(TOKENS)_*.in
