--- a/lexer/Makefile
+++ b/lexer/Makefile
@@ -20,7 +20,9 @@ $(FUTHARK_PROGRAM): $(FUTHARK_PATH)/$(FUTHARK_PROGRAM).fut
 $(CUDA_PROGRAM): $(CUDA_PATH)/$(CUDA_PROGRAM).cu $(COMMON_PATH)/sps.cu.h $(COMMON_PATH)/util.cu.h $(COMMON_PATH)/data.h
 	$(COMPILER) $(FLAGS) -o $@ $<
 
-bench: $(FUTHARK_PROGRAM) $(CUDA_PROGRAM) 
+bench: $(FUTHARK_PROGRAM) $(CUDA_PROGRAM) tokens_500MiB.in
+	futhark bench $(FUTHARK_PATH)/$(FUTHARK_PROGRAM).fut --backend=cuda
+	./$(CUDA_PROGRAM) $(DATA_PATH)/tokens_500MiB.in
 
 clean:
 	rm -rf $(CUDA_PROGRAM) $(FUTHARK_PROGRAM) *.c *.out $(FUTHARK_PATH)/*.c $(FUTHARK_PATH)/$(FUTHARK_PROGRAM)
