--- a/lexer/Makefile
+++ b/lexer/Makefile
@@ -20,8 +20,18 @@ $(DATA_PATH)/tokens_moderate_500MiB.in:
 $(DATA_PATH)/tokens_sparse_500MiB.in:
 	(cd $(DATA_PATH) && make)
 
+tokens_dense_500MiB.out: $(DATA_PATH)/tokens_dense_500MiB.in $(FUTHARK_PROGRAM)
+	cat $< | ./$(FUTHARK_PROGRAM) -b > $@
+
+tokens_moderate_500MiB.out: $(DATA_PATH)/tokens_moderate_500MiB.in $(FUTHARK_PROGRAM)
+	cat $< | ./$(FUTHARK_PROGRAM) -b > $@
+
+tokens_sparse_500MiB.out: $(DATA_PATH)/tokens_sparse_500MiB.in $(FUTHARK_PROGRAM)
+	cat $< | ./$(FUTHARK_PROGRAM) -b > $@
+
 $(FUTHARK_PROGRAM): $(FUTHARK_PATH)/$(FUTHARK_PROGRAM).fut
-	futhark cuda $< -o $(FUTHARK_PROGRAM)
+	(cd futhark && futhark pkg sync)
+	futhark cuda $< -o $@
 
 $(CUDA_PROGRAM): $(CUDA_PATH)/$(CUDA_PROGRAM).cu $(COMMON_PATH)/sps.cu.h $(COMMON_PATH)/util.cu.h $(COMMON_PATH)/data.h
 	$(COMPILER) $(FLAGS) -o $@ $<
@@ -29,12 +39,15 @@ $(CUDA_PROGRAM): $(CUDA_PATH)/$(CUDA_PROGRAM).cu $(COMMON_PATH)/sps.cu.h $(COMMO
 bench: $(DATA_PATH)/tokens_dense_500MiB.in \
 	   $(DATA_PATH)/tokens_moderate_500MiB.in \
 	   $(DATA_PATH)/tokens_sparse_500MiB.in \
+	   tokens_dense_500MiB.out \
+	   tokens_moderate_500MiB.out \
+	   tokens_sparse_500MiB.out \
 	   $(FUTHARK_PROGRAM) \
 	   $(CUDA_PROGRAM)
 	futhark bench $(FUTHARK_PATH)/$(FUTHARK_PROGRAM).fut --backend=cuda
-	./$(CUDA_PROGRAM) $(DATA_PATH)/tokens_dense_500MiB.in
-	./$(CUDA_PROGRAM) $(DATA_PATH)/tokens_moderate_500MiB.in
-	./$(CUDA_PROGRAM) $(DATA_PATH)/tokens_sparse_500MiB.in
+	./$(CUDA_PROGRAM) $(DATA_PATH)/tokens_dense_500MiB.in tokens_dense_500MiB.out
+	./$(CUDA_PROGRAM) $(DATA_PATH)/tokens_moderate_500MiB.in tokens_dense_500MiB.out
+	./$(CUDA_PROGRAM) $(DATA_PATH)/tokens_sparse_500MiB.in tokens_dense_500MiB.out
 
 clean:
-	rm -rf $(CUDA_PROGRAM) $(FUTHARK_PROGRAM) *.c *.out $(FUTHARK_PATH)/*.c $(FUTHARK_PATH)/$(FUTHARK_PROGRAM)
+	rm -rf $(CUDA_PROGRAM) $(FUTHARK_PROGRAM) *.c *.in *.out $(FUTHARK_PATH)/*.c $(FUTHARK_PATH)/$(FUTHARK_PROGRAM)
