--- a/lexer/Makefile
+++ b/lexer/Makefile
@@ -46,8 +46,8 @@ bench: $(DATA_PATH)/tokens_dense_500MiB.in \
 	   $(CUDA_PROGRAM)
 	futhark bench $(FUTHARK_PATH)/$(FUTHARK_PROGRAM).fut --backend=cuda
 	./$(CUDA_PROGRAM) $(DATA_PATH)/tokens_dense_500MiB.in tokens_dense_500MiB.out
-	./$(CUDA_PROGRAM) $(DATA_PATH)/tokens_moderate_500MiB.in tokens_dense_500MiB.out
-	./$(CUDA_PROGRAM) $(DATA_PATH)/tokens_sparse_500MiB.in tokens_dense_500MiB.out
+	./$(CUDA_PROGRAM) $(DATA_PATH)/tokens_moderate_500MiB.in tokens_moderate_500MiB.out
+	./$(CUDA_PROGRAM) $(DATA_PATH)/tokens_sparse_500MiB.in tokens_sparse_500MiB.out
 
 clean:
 	rm -rf $(CUDA_PROGRAM) $(FUTHARK_PROGRAM) *.c *.in *.out $(FUTHARK_PATH)/*.c $(FUTHARK_PATH)/$(FUTHARK_PROGRAM)
