--- a/partition/Makefile
+++ b/partition/Makefile
@@ -56,12 +56,21 @@ bench: randomints_dense_500MiB.out \
 	   $(DATA_PATH)/randomints_full_500MiB.in \
 	   $(CUDA_PROGRAM) \
 	   $(FUTHARK_PROGRAM)
+	@echo ""
+	@echo "Futhark:"
 	futhark bench $(FUTHARK_PATH)/$(FUTHARK_PROGRAM).fut --backend=cuda
+	@echo ""
+	@echo "Cuda:"
 	./$(CUDA_PROGRAM) $(DATA_PATH)/randomints_full_500MiB.in ./randomints_full_500MiB.out
+	@echo ""
 	./$(CUDA_PROGRAM) $(DATA_PATH)/randomints_dense_500MiB.in ./randomints_dense_500MiB.out
+	@echo ""
 	./$(CUDA_PROGRAM) $(DATA_PATH)/randomints_moderate_500MiB.in ./randomints_moderate_500MiB.out
+	@echo ""
 	./$(CUDA_PROGRAM) $(DATA_PATH)/randomints_sparse_500MiB.in ./randomints_sparse_500MiB.out
+	@echo ""
 	./$(CUDA_PROGRAM) $(DATA_PATH)/randomints_empty_500MiB.in ./randomints_empty_500MiB.out
+	@echo ""
 
 $(CUDA_PROGRAM): $(CUDA_PATH)/$(CUDA_PROGRAM).cu $(COMMON_PATH)/sps.cu.h $(COMMON_PATH)/util.cu.h $(COMMON_PATH)/data.h
 	$(COMPILER) $(FLAGS) -o $@ $<
