--- a/filter/Makefile
+++ b/filter/Makefile
@@ -9,6 +9,7 @@ FLAGS?=-O3 --std=c++14 -diag-suppress 550
 RED=\u001b[31m
 GREEN=\u001b[32m
 DEFAULT=\u001b[10m
+
 default: bench
 
 .PHONY: clean bench
@@ -58,10 +59,10 @@ bench: randomints_dense_500MiB.out \
 	   $(DATA_PATH)/randomints_full_500MiB.in \
 	   $(CUDA_PROGRAM) \
 	   $(FUTHARK_PROGRAM)
-	@echo -e "$(RED)=== FUTHARK ==="
-	futhark bench $(FUTHARK_PATH)/$(FUTHARK_PROGRAM).fut --backend=cuda
+	@echo -e "$(RED)=== FUTHARK FILTER ==="
+	@futhark bench $(FUTHARK_PATH)/$(FUTHARK_PROGRAM).fut --backend=cuda
 	@echo -e "$(RED)==============="
-	@echo -e "$(GREEN)=== CUDA ==="
+	@echo -e "$(GREEN)=== CUDA FILTER ==="
 	@./$(CUDA_PROGRAM) filter $(DATA_PATH)/randomints_full_500MiB.in ./randomints_full_500MiB.out \
                               $(DATA_PATH)/randomints_dense_500MiB.in ./randomints_dense_500MiB.out \
 	                          $(DATA_PATH)/randomints_moderate_500MiB.in ./randomints_moderate_500MiB.out \
