--- a/segreduce/Makefile
+++ b/segreduce/Makefile
@@ -6,6 +6,9 @@ CUDA_PATH=./cuda
 CUDA_PROGRAM=cuda_segreduce
 COMPILER?=nvcc
 FLAGS?=-O3 --std=c++14 -diag-suppress 550 -diag-suppress 20054
+RED=\u001b[31m
+GREEN=\u001b[32m
+DEFAULT=\u001b[10m
 
 default: bench
 
@@ -78,21 +81,20 @@ bench: randomints_dense_500MiB.out \
 	   randomints_full_500MiB.in \
 	   $(CUDA_PROGRAM) \
 	   $(FUTHARK_PROGRAM)
+	@echo -e "$(RED)=== FUTHARK SEGREDUCE ==="
+	@futhark bench $(FUTHARK_PATH)/$(FUTHARK_PROGRAM).fut --backend=cuda
+	@echo -e "$(RED)==============="
+	@echo -e "$(GREEN)=== CUDA SEGREDUCE ==="
+	@./$(CUDA_PROGRAM) ./randomints_full_500MiB.in ./randomints_full_500MiB.out
 	@echo ""
-	@echo "Futhark:"
-	futhark bench $(FUTHARK_PATH)/$(FUTHARK_PROGRAM).fut --backend=cuda
+	@./$(CUDA_PROGRAM) ./randomints_dense_500MiB.in ./randomints_dense_500MiB.out
 	@echo ""
-	@echo "Cuda:"
-	./$(CUDA_PROGRAM) ./randomints_full_500MiB.in ./randomints_full_500MiB.out
+	@./$(CUDA_PROGRAM) ./randomints_moderate_500MiB.in ./randomints_moderate_500MiB.out
 	@echo ""
-	./$(CUDA_PROGRAM) ./randomints_dense_500MiB.in ./randomints_dense_500MiB.out
+	@./$(CUDA_PROGRAM) ./randomints_sparse_500MiB.in ./randomints_sparse_500MiB.out
 	@echo ""
-	./$(CUDA_PROGRAM) ./randomints_moderate_500MiB.in ./randomints_moderate_500MiB.out
-	@echo ""
-	./$(CUDA_PROGRAM) ./randomints_sparse_500MiB.in ./randomints_sparse_500MiB.out
-	@echo ""
-	./$(CUDA_PROGRAM) ./randomints_empty_500MiB.in ./randomints_empty_500MiB.out
-	@echo ""
+	@./$(CUDA_PROGRAM) ./randomints_empty_500MiB.in ./randomints_empty_500MiB.out
+	@echo -e "$(GREEN)============$(DEFAULT)"
 
 $(CUDA_PROGRAM): $(CUDA_PATH)/$(CUDA_PROGRAM).cu $(COMMON_PATH)/sps.cu.h $(COMMON_PATH)/util.cu.h $(COMMON_PATH)/data.h
 	$(COMPILER) $(FLAGS) -o $@ $<
