--- a/common/Makefile
+++ b/common/Makefile
@@ -3,7 +3,7 @@ FLAGS?=-O3 --std=c++14
 TEST=test
 RED=\u001b[31m
 GREEN=\u001b[32m
-DEFAULT=\u001b[10m
+DEFAULT=\033[39m
 
 default: $(TEST) run
 
@@ -13,7 +13,7 @@ $(TEST): $(TEST).cu sps.cu.h
 	$(COMPILER) $(FLAGS) -o $@ $<
 
 run: $(TEST)
-	@echo -e "$(GREEN)=== CUDA SINGLE PASS SCAN ==="
+	@echo -e "$(GREEN)=== CUDA SINGLE PASS SCAN ===$(DEFAULT)"
 	@./$<
 	@echo -e "$(GREEN)============$(DEFAULT)"
 
