--- a/filter/Makefile
+++ b/filter/Makefile
@@ -8,7 +8,7 @@ COMPILER?=nvcc
 FLAGS?=-O3 --std=c++14 -diag-suppress 550
 RED=\u001b[31m
 GREEN=\u001b[32m
-DEFAULT=\u001b[10m
+DEFAULT=\033[39m
 
 default: bench
 
@@ -59,33 +59,19 @@ bench: randomints_dense_500MiB.out \
 	   $(DATA_PATH)/randomints_full_500MiB.in \
 	   $(CUDA_PROGRAM) \
 	   $(FUTHARK_PROGRAM)
-	@echo -e "$(RED)=== FUTHARK FILTER ==="
+	@echo -e "$(RED)=== FUTHARK FILTER ===$(DEFAULT)"
 	@futhark bench $(FUTHARK_PATH)/$(FUTHARK_PROGRAM).fut --backend=cuda
-	@echo -e "$(RED)==============="
-	@echo -e "$(GREEN)=== CUDA FILTER ==="
-	@./$(CUDA_PROGRAM) filter $(DATA_PATH)/randomints_full_500MiB.in ./randomints_full_500MiB.out \
-                              $(DATA_PATH)/randomints_dense_500MiB.in ./randomints_dense_500MiB.out \
-	                          $(DATA_PATH)/randomints_moderate_500MiB.in ./randomints_moderate_500MiB.out \
-	                          $(DATA_PATH)/randomints_sparse_500MiB.in ./randomints_sparse_500MiB.out \
-	                          $(DATA_PATH)/randomints_empty_500MiB.in ./randomints_empty_500MiB.out
+	@echo -e "$(RED)===============$(DEFAULT)"
+	@echo -e "$(GREEN)=== CUDA FILTER ===$(DEFAULT)"
+	@./$(CUDA_PROGRAM) $(DATA_PATH)/randomints_full_500MiB.in ./randomints_full_500MiB.out
 	@echo ""
-	@./$(CUDA_PROGRAM) coalesced $(DATA_PATH)/randomints_full_500MiB.in ./randomints_full_500MiB.out \
-	                             $(DATA_PATH)/randomints_dense_500MiB.in ./randomints_dense_500MiB.out \
-	                             $(DATA_PATH)/randomints_moderate_500MiB.in ./randomints_moderate_500MiB.out \
-	                             $(DATA_PATH)/randomints_sparse_500MiB.in ./randomints_sparse_500MiB.out \
-	                             $(DATA_PATH)/randomints_empty_500MiB.in ./randomints_empty_500MiB.out
+	@./$(CUDA_PROGRAM) $(DATA_PATH)/randomints_dense_500MiB.in ./randomints_dense_500MiB.out
 	@echo ""
-	@./$(CUDA_PROGRAM) fewer $(DATA_PATH)/randomints_full_500MiB.in ./randomints_full_500MiB.out \
-	                         $(DATA_PATH)/randomints_dense_500MiB.in ./randomints_dense_500MiB.out \
-	                         $(DATA_PATH)/randomints_moderate_500MiB.in ./randomints_moderate_500MiB.out \
-	                         $(DATA_PATH)/randomints_sparse_500MiB.in ./randomints_sparse_500MiB.out \
-	                         $(DATA_PATH)/randomints_empty_500MiB.in ./randomints_empty_500MiB.out
+	@./$(CUDA_PROGRAM) $(DATA_PATH)/randomints_moderate_500MiB.in ./randomints_moderate_500MiB.out
 	@echo ""
-	@./$(CUDA_PROGRAM) cub $(DATA_PATH)/randomints_full_500MiB.in ./randomints_full_500MiB.out \
-	                       $(DATA_PATH)/randomints_dense_500MiB.in ./randomints_dense_500MiB.out \
-	                       $(DATA_PATH)/randomints_moderate_500MiB.in ./randomints_moderate_500MiB.out \
-	                       $(DATA_PATH)/randomints_sparse_500MiB.in ./randomints_sparse_500MiB.out \
-	                       $(DATA_PATH)/randomints_empty_500MiB.in ./randomints_empty_500MiB.out
+	@./$(CUDA_PROGRAM) $(DATA_PATH)/randomints_sparse_500MiB.in ./randomints_sparse_500MiB.out
+	@echo ""
+	@./$(CUDA_PROGRAM) $(DATA_PATH)/randomints_empty_500MiB.in ./randomints_empty_500MiB.out
 	@echo -e "$(GREEN)============$(DEFAULT)"
 
 $(CUDA_PROGRAM): $(CUDA_PATH)/$(CUDA_PROGRAM).cu $(COMMON_PATH)/sps.cu.h $(COMMON_PATH)/util.cu.h $(COMMON_PATH)/data.h
