--- a/segreduce/Makefile
+++ b/segreduce/Makefile
@@ -8,7 +8,7 @@ COMPILER?=nvcc
 FLAGS?=-O3 --std=c++14 -diag-suppress 550 -diag-suppress 20054
 RED=\u001b[31m
 GREEN=\u001b[32m
-DEFAULT=\u001b[10m
+DEFAULT=\033[39m
 
 default: bench
 
@@ -81,10 +81,10 @@ bench: randomints_dense_500MiB.out \
 	   randomints_full_500MiB.in \
 	   $(CUDA_PROGRAM) \
 	   $(FUTHARK_PROGRAM)
-	@echo -e "$(RED)=== FUTHARK SEGREDUCE ==="
+	@echo -e "$(RED)=== FUTHARK SEGREDUCE ===$(DEFAULT)"
 	@futhark bench $(FUTHARK_PATH)/$(FUTHARK_PROGRAM).fut --backend=cuda
-	@echo -e "$(RED)==============="
-	@echo -e "$(GREEN)=== CUDA SEGREDUCE ==="
+	@echo -e "$(RED)===============$(DEFAULT)"
+	@echo -e "$(GREEN)=== CUDA SEGREDUCE ===$(DEFAULT)"
 	@./$(CUDA_PROGRAM) ./randomints_full_500MiB.in ./randomints_full_500MiB.out
 	@echo ""
 	@./$(CUDA_PROGRAM) ./randomints_dense_500MiB.in ./randomints_dense_500MiB.out
